version/0.28/_sources/api/solver/_autosummary/settings/moving_mesh_velocity.rst.txt
:orphan:

.. _moving_mesh_velocity:

moving_mesh_velocity
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.moving_mesh_velocity
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`moving_mesh_velocity_child <moving_mesh_velocity_child>`


.. rubric:: Included in:

================================   =============================================================

Parent                                                                                   Summary

================================   =============================================================
:ref:`mesh_motion <mesh_motion>`       Allows to change mesh-motion model variables or settings.

================================   =============================================================

